[package]
name = "backend_sensor_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.26", default-features = false, features = ["sink"] }
log = "0.4.17"
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
pretty_env_logger = "0.4.0"
serde = "1.0.152"
